@@ -5,6 +5,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.Future;
+import java.util.stream.Collectors;
 
 import org.apache.hc.client5.http.impl.async.CloseableHttpAsyncClient;
 import org.apache.hc.core5.concurrent.FutureCallback;
@@ -45,7 +46,7 @@ public class UserRolesGetter extends AsyncBaseClient<List<Role>> implements Asyn
             .orElse(new ArrayList<>())
             .stream()
             .map(w -> w.toRole())
-            .toList();
+            .collect(Collectors.toList());
         return new Result<>(resp.getStatusCode(), roles, resp.getErrors());
       }
     });
